[package]
name = "panorama"
version = "0.1.0"
authors = ["xuebling <asxxw741@qq.com>"]
edition = "2018"
description = "run task"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
log = "0.4.14"
env_logger = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.62"
anyhow = "1.0.38"
toy-rpc = "0.5.2"
pnet = "0.27.2"