[package]
name = "panorama"
version = "0.1.0"
authors = ["xuebling <asxxw741@qq.com>"]
edition = "2018"
description = "A distributed task dispatched system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "panorama"
path = "./src/bin/panorama.rs"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
anyhow = "1.0.38"
#pnet = "0.27.2"
crdts = "6.3.3"
gossip = "0.0.3"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
rand = "0.8"
rust-crypto = "0.2"
thiserror = "1"
futures = "0.3"
#crossterm = "0.19"